src/objects/Apttus_Config2__DatedExchangeRate__c.object
<CustomObject>
    <description>Holds dated currency exchange rates</description>
    <fields>
        <fullName>Apttus_Config2__ConversionRate__c</fullName>
        <description>The exchange rate</description>
        <inlineHelpText>The exchange rate</inlineHelpText>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CurrencyCodeInternal__c</fullName>
        <description>Currency Code for Internal Use</description>
        <externalId>true</externalId>
        <inlineHelpText>Currency Code for Internal Use</inlineHelpText>
        <label>Currency Code (Internal)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NextStartDate__c</fullName>
        <description>The next exchange period date</description>
        <inlineHelpText>The next exchange period date</inlineHelpText>
        <label>Next Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RateType__c</fullName>
        <description>The exchange rate type</description>
        <inlineHelpText>The exchange rate type</inlineHelpText>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Period End Rate</fullName>
                    <default>true</default>
                    <label>Period End Rate</label>
                </value>
                <value>
                    <fullName>Period Average Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StartDate__c</fullName>
        <description>The current exchange period date</description>
        <inlineHelpText>The current exchange period date</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Dated Exchange Rate</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Config2__RateType__c</columns>
        <columns>Apttus_Config2__StartDate__c</columns>
        <columns>Apttus_Config2__NextStartDate__c</columns>
        <columns>Apttus_Config2__ConversionRate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Apttus_Config2__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Dated Exchange Rate Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dated Exchange Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>